# EduVision

./: .gitignore  README.md  pyproject.toml  requirements-face.txt  requirements.txt  run_all_tracking.bat  test_best_pt.py  test_rtsp.py
Report 1/: main.tex
Report 2/: main.tex
configs/: behavior.yaml
configs/services/behavior_detection/: dataset.yaml  dataset1.yaml  train.yaml  yolo_behavior.yaml
configs/services/face_detection/: retinaface.yaml  scrfd.yaml
configs/services/face_recognition/: arcface.yaml  insightface.yaml
configs/services/head_pose/: mediapipe.yaml
configs/services/object_detection/: yolo.yaml
configs/services/person_detection/: yolo11n.yaml  yolo11s.yaml  yolo26n.yaml  yolo26s.yaml
configs/services/pose_estimation/: yolo11n-pose.yaml  yolo11s-pose.yaml
docs/: EduVision_Pipeline.drawio  EduVision_Pipeline.md
scripts/: auto_enroll.py
services/: streamlit_demo.py
services/backend_api/: __init__.py  database.py  event_pusher.py  main.py  models.py  requirements-api.txt
services/frontend/: dashboard.html  index.html  package-lock.json  package.json  reports.html  session-detail.html  sessions.html  settings.html  students.html  tailwind.config.js
services/report_generator/: __init__.py  main.py
services/video_connection/: __init__.py  capture.py  realtime_demo.py
services/vision_ai/: __init__.py
tests/: test_behavior_detector.py  test_e2e_metrics.py  test_person_detector.py  test_report_aggregator.py  test_seat_monitor.py  test_temporal_behavior.py
tools/: README.md  auto_annotate.py  check_resolutions.py  extract_frames.py  fix_away_from_seat.py  merge_datasets.py  push_to_github.py  split_dataset.py  track_and_label.py  update_labels.py  upload_to_hf.py  verify_dataset.py
tools/data/: augment_annotated.py  augment_data.py  convert_to_cvat.py  copy_labels.py  explore_annotations.py  export_multilabel.py  gpt_multilabel_tracker.py  merge_datasets.py  process_cvat_xml.py  train_behavior.py  upload_to_hf.py
tools/evaluate/: README.md  __init__.py  benchmark.py  convert_yolo_ground_truth.py  evaluate.py  metrics.py
(+75 files in other folders)
