[project]
name = "eduvision"
version = "0.1.0"
description = "Fixed-camera classroom behavior monitoring pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "albumentations>=1.4.0,<3",
    "huggingface-hub>=0.20.0,<2",
    "matplotlib>=3.8.0,<4",
    "numpy>=1.26.0,<3",
    "opencv-python>=4.8.0,<5",
    "pillow>=10.0.0,<13",
    "pyyaml>=6.0,<7",
    "scipy>=1.11.0,<2",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "tqdm>=4.65.0,<5",
    "ultralytics>=8.4.0,<9",
]

[project.optional-dependencies]
face = [
    "insightface>=0.7.3,<0.8",
    "onnxruntime>=1.18.0,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
